# toml-translator

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
assets/examples/: out.poetry.toml  out.uv.toml  pyproject.poetry.toml  pyproject.uv.toml
src/toml_translator/: __init__.py  cli.py  translator.py  utils.py
tests/: test_poetry2uv.py  test_uv2poetry.py
